--- a/qr-code-component-main/css/styles.css
+++ b/qr-code-component-main/css/styles.css
@@ -30,11 +30,21 @@ p {
   padding: 100px 25px;
 }
 
+@media screen and (min-width: 900px) {
+  .lt-blue-rect {
+    background-color: hsl(212, 45%, 89%);
+    width: 100%;
+    height: auto;
+    padding: 100px 25px;
+    margin: 0;
+  }
+}
+
 .white-rect {
   background-color: hsl(0, 0%, 100%);
   border-radius: 5%;
   border: 0 auto;
   display: inline-block;
   width: 325px;
-  padding: 10px;
+  padding: 5px;
 }
